<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="210dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_vote"
            style="@style/TextBold.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/vote_average"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_vote"
            style="@style/TextContent.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_vote"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/t_vote"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_popularity"
            style="@style/TextBold.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_vote"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_vote"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_popularity"
            style="@style/TextContent.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_popularity"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/t_popularity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_release"
            style="@style/TextBold.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_popularity"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_release"
            style="@style/TextContent.Right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_release"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/t_release"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t_overview"
            style="@style/TextBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_release"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_release"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_overview"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_overview"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_overview"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="158dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="218dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>